# openWakeWord

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: tests.yml
openwakeword/: __init__.py  custom_verifier_model.py  data.py  metrics.py  model.py  train.py  utils.py  vad.py
tests/: test_custom_verifier_model.py  test_models.py  test_train_gradient_accumulation.py  test_train_observability.py  test_vad.py
